fix overflow text in notes

--- a/client/src/pages/interview/viewInterview/ViewInterview.module.css
+++ b/client/src/pages/interview/viewInterview/ViewInterview.module.css
@@ -55,6 +55,7 @@
     padding-left: 10px;
     margin-top: 4px;
     color: var(--colorNotesText);
+    overflow-wrap: anywhere;
 }
 
 .interviewContent h2 {
